[DSTEW-1578] - Migrate PDA retry logic