@@ -21,8 +21,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import reactor.core.publisher.Mono;
 import uk.gov.justice.laa.dstew.payments.claims.validation.core.client.FeeSchemeClient;
-import uk.gov.justice.laa.dstew.payments.claims.validation.core.client.ProviderDetailsClient;
 import uk.gov.justice.laa.dstew.payments.claims.validation.core.model.Claim;
+import uk.gov.justice.laa.dstew.payments.claims.validation.core.provider.impl.HttpProviderDetailsProvider;
 import uk.gov.justice.laa.dstew.payments.claims.validation.core.validator.claim.ClaimValidationContext;
 import uk.gov.justice.laa.dstew.payments.claims.validation.core.validator.claim.ClaimValidationError;
 import uk.gov.justice.laa.dstew.payments.claimsdata.model.AreaOfLaw;
@@ -39,11 +39,13 @@ class EffectiveCategoryOfLawClaimValidationTest {
   EffectiveCategoryOfLawClaimValidator validator;
 
   @Mock FeeSchemeClient feeSchemeClient;
-  @Mock ProviderDetailsClient providerDetailsClient;
+  @Mock
+  HttpProviderDetailsProvider httpProviderDetailsProvider;
 
   @BeforeEach
   void beforeEach() {
-    validator = new EffectiveCategoryOfLawClaimValidator(feeSchemeClient, providerDetailsClient);
+    validator = new EffectiveCategoryOfLawClaimValidator(
+            feeSchemeClient, httpProviderDetailsProvider);
   }
 
   @Test
@@ -65,8 +67,8 @@ class EffectiveCategoryOfLawClaimValidationTest {
                 new FirmOfficeContractAndScheduleDetails()
                     .addScheduleLinesItem(
                         new FirmOfficeContractAndScheduleLine().categoryOfLaw("categoryOfLaw1")));
-    when(providerDetailsClient.getProviderFirmSchedules(
-            eq("officeAccountNumber"), eq(AreaOfLaw.LEGAL_HELP.getValue()), any(LocalDate.class)))
+    when(httpProviderDetailsProvider.getProviderFirmSchedules(
+            eq("officeAccountNumber"), any(LocalDate.class)))
         .thenReturn(Mono.just(data));
     FeeDetailsResponse feeDetailsResponse = new FeeDetailsResponse();
     feeDetailsResponse.setCategoryOfLawCode("categoryOfLaw1");
@@ -98,13 +100,13 @@ class EffectiveCategoryOfLawClaimValidationTest {
         .officeAccountNumber("officeAccountNumber")
         .areaOfLaw(AreaOfLaw.LEGAL_HELP)
         .build();
-    when(providerDetailsClient.getProviderFirmSchedules(
-            eq("officeAccountNumber"), eq(AreaOfLaw.LEGAL_HELP.getValue()), any(LocalDate.class)))
+    when(httpProviderDetailsProvider.getProviderFirmSchedules(
+            eq("officeAccountNumber"), any(LocalDate.class)))
         .thenReturn(Mono.error(exception));
     ClaimValidationContext context = ClaimValidationContext.builder().build();
     validator.validate(claim, context);
     assertThat(context.getIssues()).hasSize(1);
-    assertThat(context.getIssues().get(0).toString())
+    assertThat(context.getIssues().getFirst().toString())
         .contains(ClaimValidationError.TECHNICAL_ERROR_PROVIDER_DETAILS_API.name());
   }
 }
